# pathplus

./: .gitignore  CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
pathplus/: __init__.py  directories.py  directory_manager.py  file.py  file_manager.py  utils.py
tests/: test.txt  test_compare.py  test_directory.py  test_hash.py  test_info.py
