[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pathplus"
version = "0.1.0"
description = "High-level utilities built on top of pathlib."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Ahmet Yavuzkanat"}
]