[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pathplus"
version = "0.2.0"
description = "High-level utilities built on top of pathlib."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["filesystem", "file", "directory", "pathlib", "hash"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

authors = [
    {name = "Ahmet Yavuzkanat"}
]

[project.optional-dependencies]
dev = ["pytest"]
